# mappy

./: .gitignore  API.md  CHANGELOG.md  Cargo.toml  DOCUMENTATION_INDEX.md  QUOTIENT_FILTER.md  README.md  TECHNICAL_README.md  TESTING.md  pytest.ini  run_tests_and_benchmarks.sh  test_mappy_python.py  test_python_quotient_filter.py  test_quotient_filter_complete.sh
data/: mappy.aof
data/mappy.db/: db
docs/: DOCUMENTATION_INDEX.md
examples/: redis_benchmark_demo.rs
mappy-client/: Cargo.toml  README.md
mappy-client/src/: lib.rs
mappy-core/: Cargo.toml
mappy-core/benches/: QUOTIENT_FILTER_BENCHMARKS.md  insert.rs  query.rs  redis_comparison.rs  redis_comparison_broken.rs  redis_comparison_fixed.rs
mappy-core/data/mappy.db/: db  snap.00000000000000B6
mappy-core/src/: deletion.rs  engine.rs  error.rs  hash.rs  lib.rs  maplet.rs  operators.rs  quotient_filter.rs
mappy-core/src/storage/: aof.rs  disk.rs  hybrid.rs
mappy-python/: Cargo.toml  README.md  pyproject.toml
mappy-python-client/: mappy_client.py
mappy-python/src/: lib.rs
mappy-server/: Cargo.toml  README.md
mappy-server/src/: main.rs
stilts/: BENCHMARK_RESULTS.md  COMPLETE_OPTIMIZATION_REPORT.md  Cargo.toml  FINAL_BENCHMARK_RESULTS.md  FINAL_OPTIMIZED_RESULTS.md  ML_BENCHMARKS.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_RESULTS.md  OPTIMIZATION_SUMMARY.md  README.md
stilts/benches/: comparison_benchmarks.rs  compression_benchmarks.rs  ml_performance_benchmarks.rs  storage_benchmarks.rs
stilts/examples/: basic_compression.rs  comprehensive_benchmark.rs  debug_timing.rs  format_examples.rs  mappy_integration.rs  ml_benchmark_demo.rs
stilts/python/: Cargo.toml  pyproject.toml
stilts/python/src/: lib.rs
stilts/reports/: ML_BENCHMARK_RESULTS.md  README.md  comprehensive_storage_report.html  ml_benchmark_report.html  storage_report.html
stilts/src/: lib.rs  mappy_integration.rs
stilts/src/benchmark/: comparison.rs  mappy_comparison.rs  metrics.rs  ml_accuracy_tests.rs  ml_benchmarks.rs  ml_tasks.rs  mod.rs  runner.rs
stilts/src/compression/: arithmetic.rs  dictionary.rs  huffman.rs  mod.rs
stilts/src/formats/: mod.rs  parser.rs  serializer.rs
stilts/src/plotting/: charts.rs  ml_reports.rs  mod.rs  reports.rs  storage_charts.rs
tests/: __init__.py  conftest.py  test_basic_functionality.py  test_benchmarks_comprehensive.py  test_comparison_benchmarks.py  test_correctness_advanced.py  test_data_analysis.py  test_ml_embeddings.py  test_numerical_computing.py  test_numpy_integration.py  test_performance.py  test_production_scenarios.py  test_real_datasets.py  test_stress.py  test_use_cases.py  test_utils.py
