[package]
name = "mappy-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Client library for mappy maplet data structures"
readme = "README.md"

[dependencies]
# Workspace dependencies
mappy-core = "0.1.1"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Async runtime for tests
tokio = { version = "1.47", features = ["rt", "macros"] }
