[package]
name = "mappy-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Network server for Mappy service"
readme = "README.md"
keywords = ["mappy", "maplet", "data-structures", "server", "api"]
categories = ["data-structures", "web-programming::http-server"]

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tls.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
dotenvy.workspace = true

# Local dependencies
mappy-core = { path = "../mappy-core" }

# Additional dependencies
bytes = "1.10.1"
tokio-util = { version = "0.7.16", features = ["codec"] }
futures = "0.3.31"

# Binary target
[[bin]]
name = "mappy-server"
path = "src/main.rs"

# Linting configuration
[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
all = "warn"
multiple-crate-versions = "allow"
