[package]
name = "stilts"
version = "0.1.0"
edition = "2024"
authors = ["Balazs Horvath"]
license = "MIT"
description = "Tag compression library with multiple algorithms (Huffman, Arithmetic, Dictionary)"
repository = "https://github.com/entropy-tamer/mappy"

[dependencies]
# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bincode = "2.0.1"

# Bit manipulation
bitvec = "1.0.1"

# Compression comparison
flate2 = "1.1.5"
lz4 = "1.28.1"

# Parallel processing
rayon = "1.11.0"

# Plotting
plotters = "0.3.7"

# Hashing
ahash = "0.8.12"

# Collections
indexmap = "2.12.0"

# Date/time for reports
chrono = "0.4"

# Async runtime (for ML benchmarks with mappy)
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"], optional = true }

# Mappy integration (optional, for benchmarks)
mappy-core = { path = "../mappy-core", optional = true }

[features]
default = []
mappy-integration = ["mappy-core", "tokio"]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
proptest = "1.9.0"
mappy-core = { path = "../mappy-core" }

[[bench]]
name = "compression_benchmarks"
harness = false

[[bench]]
name = "comparison_benchmarks"
harness = false

[[bench]]
name = "ml_performance_benchmarks"
harness = false

